# FitCore

./: .gitignore  README.md
FitCore/: CMakeLists.txt  Login.qml  Main.qml  accessmanager.cpp  accessmanager.h  loginbackend.cpp  loginbackend.h  main.cpp  nativeeventfilter.h  resources.qrc  usersession.cpp  usersession.h
